# emulator

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  COMMANDS.md  HOW_START_CHECK.md  INSTALL.md  MANIFEST.md  MANIFEST_OLD_.md  Makefile  README.md  __init__.py  autoisf_algorithm.py  autoisf_full_testrunner.py  autoisf_structs.py  determine-basal.js  fix_autoisf_fulL  mypy.ini  patch  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run.py  run_all.py  run_compare_trace.py  run_opt.py  run_tests.py  setup.cfg  setup.py  show_profile_keys.py  structure.txt
123/: main.py  main1.py  requirements.txt  scan.py  test_autoisf_from_zip.py  test_single_rt.py  Новый текстовый документ.txt
aaps_emulator/: __init__.py  autoisf_rt_fix.patch  autoisf_structs.py  config.py  import_check_output.txt
aaps_emulator.egg-info/: PKG-INFO
analysis/: compare_runner.py
core/: autoisf_algorithm.py  autoisf_full.py  autoisf_module.py  autoisf_pipeline.py  autoisf_predictions_adapter.py  autoisf_structs.py  autosens.py  determine_basal.py  future_iob_engine.py  glucose_status_autoisf.py  predictions.py  rt_parser.py  utils.py
gui/: main_qt.py
parsing/: context_parsers.py  inputs_builder.py  log_loader.py  rt_parser.py  utils.py
runner/: __init__.py  build_inputs.py  compare_runner.py  generate_report.py  kotlin_parser.py  load_logs.py
scripts/: check_all.ps1  compare_real_vs_aaps.py  quick_visual_test.py
tests/: compare_with_reference.py  conftest.py  diffs_with_inputs.csv  reference_generated.csv  regression_checks.py  test_aaps_parity.py  test_all_blocks_parametrized.py  test_auto_ga_v3.py  test_autoisf_core_cases.py  test_autoisf_extended_cases.py  test_autoisf_rt.py  test_build_inputs.py  test_compare_runner.py  test_compare_runner_smoke.py  test_full_pipeline.py  test_full_suite.py  test_gui_smoke.py  test_heatmap.py  test_integration_logs.py  test_kotlin_parser.py  test_plot_predbgs.py  test_regression_guard.py  test_rt_lowtemp.py  test_rt_parser.py  test_single_block_from_log.py  test_visual_dashboard.py
tools/: check_project_structure.py  check_report.py  compare_with_aaps.py  debug_eventualbg.py  debug_one_block.py  diff_report.py  dump_diffs_and_inputs.py  filter_clean_blocks.py  generate_html_report.py  generate_inputs_from_logs.py  heatmap_diff.py  (+6 more)
(+401 files in other folders)
