[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emulator"
version = "3.0.0"
description = "Python emulator of AAPS AutoISF and predictions engine"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
