[project]
name = "aaps_emulator"
version = "0.1.0"
description = "AAPS AutoISF Python Emulator"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "plotly",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["aaps_emulator"]
exclude = ["data*", "out*", "scripts*", "tests*", ".*"]
