[project]
name = "aaps_emulator"
version = "0.1.0"
description = "AAPS AutoISF Python Emulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dimas" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "autoflake",
    "black",
    "build",
    "twine",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["aaps_emulator"]
exclude = ["data*", "out*", "scripts*", "tests*", ".*"]
