[metadata]
name = aaps_emulator
version = 0.1.0
description = AAPS AutoISF Python Emulator
author = Dimas
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<your_username>/<your_repo>

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

install_requires =
    numpy
    pandas
    matplotlib
    plotly

[options.packages.find]
include = aaps_emulator
exclude =
    data*
    out*
    scripts*
    tests*
    .*

[options.extras_require]
dev =
    pytest
    ruff
    autoflake
    black
    build
    twine

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 120
